RESOLVED FIXED91763
WebKit should pass <title> element value as the default description for web views
https://bugs.webkit.org/show_bug.cgi?id=91763
Summary WebKit should pass <title> element value as the default description for web v...
chris fleizach
Reported 2012-07-19 10:55:37 PDT
WebKit should pass <title> element value as the default AXTitle for web views * STEPS TO REPRODUCE 1. Load any web page. 2. View the AXWebArea in AX Inspector. * RESULTS AXTitle is empty, but there is a web standard default title for web pages: the <title> element.
Attachments
patch (7.84 KB, patch)
2012-07-19 11:00 PDT, chris fleizach
andersca: review+
chris fleizach
Comment 1 2012-07-19 10:55:44 PDT
chris fleizach
Comment 2 2012-07-19 11:00:41 PDT
Anders Carlsson
Comment 3 2012-07-19 11:59:21 PDT
Comment on attachment 153309 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=153309&action=review > Source/WebCore/accessibility/AccessibilityRenderObject.cpp:1435 > + Element* documentElement = document->documentElement(); > + if (documentElement) { You can just move the variable declaration inside of the if check here.
chris fleizach
Comment 4 2012-07-19 15:56:13 PDT
Note You need to log in before you can comment on or make changes to this bug.