Source/WebCore: WebKit should pass <title> element value as the default description for web views https://bugs.webkit.org/show_bug.cgi?id=91763

Reviewed by Anders Carlsson.

Update the logic for determining the description for the AXWebArea to include the document's title.

Test: platform/mac/accessibility/document-title-used-for-description.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::webAreaAccessibilityDescription):
   Move web area description handling into a separate method.
(WebCore::AccessibilityRenderObject::accessibilityDescription):
* accessibility/AccessibilityRenderObject.h:
(AccessibilityRenderObject):

LayoutTests: WebKit should pass <title> element value as the default AXTitle for web views
https://bugs.webkit.org/show_bug.cgi?id=91763

Reviewed by Anders Carlsson.

* platform/mac/accessibility/document-title-used-for-description-expected.txt: Added.
* platform/mac/accessibility/document-title-used-for-description.html: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@123157 bbb929c8-8fbe-4397-9dbb-9b2b20218538