third_party/WebKit/Source/WebCore/accessibility/AccessibilityRenderObject.h
@@ -319,7 +319,8 @@ private:
     String accessibilityDescriptionForElements(Vector<Element*> &elements) const;
     void elementsFromAttribute(Vector<Element*>& elements, const QualifiedName&) const;
     String ariaAccessibilityDescription() const;
-    
+    String webAreaAccessibilityDescription() const;
+
     virtual ESpeak speakProperty() const;
     
     virtual const AtomicString& ariaLiveRegionStatus() const;
